    from ${GNUPGHOME}/gpg.conf if that file exists. (addresses MS #2080)
  * Under Linux, report details about the requesting process if we can
    learn them from /proc (closes MS #2005)
  * Conditionally rely on Gtk2 perl module -- no marginal UI without it,
    but you can also install the MSVA now without needing to pull in a
    bunch of Gtk libs (closes MS #2514)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 11 Oct 2010 16:02:22 -0400

msva-perl (0.4) upstream;

  * removed dependency on monkeysphere package -- just invoke GnuPG
    directly (needs GnuPG::Interface, Regexp::Common) (closes MS #2034)
  * adds MSVA_KEYSERVER_POLICY and MSVA_KEYSERVER environment variables.
  * added a marginal UI (needs Gtk2 perl module) (closes MS #2004)
  * Filter incoming uids to match a strict regex (closes MS #2270)
  * Trivially untaint the environment for the single child process
    (closes MS #2461)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 04 Oct 2010 01:06:52 -0400

msva-perl (0.3) upstream;

  * packaging re-organization
  * properly closing piped monkeysphere call
  * restore default SIGCHLD handling for exec'ed subprocess (Closes: MS #2414)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Wed, 16 Jun 2010 02:29:06 -0400

msva-perl (0.2) upstream;

  * can now be invoked with a sub-command; will run until subcommand
    completes, and then terminate with the same return code (this is
    similar to the ssh-agent technique, and enables inclusion in
    Xsession.d; see monkeysphere 0.29 package for automatic startup).
  * chooses arbitrary open port by default (can still be specified with
    MSVA_PORT environment variable)
  * minimized logging spew by default.
  * now shipping README.schema (notes about possible future MSVA
    implementations)
  * cleanup Makefile and distribution strategies.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 15 Mar 2010 14:25:42 -0400

msva-perl (0.1) upstream;

   * first release.
