@@ -7,6 +7,10 @@ msva-perl (0.5~pre) unstable; urgency=low
   * Conditionally rely on Gtk2 perl module -- no marginal UI without it,
     but you can also install the MSVA now without needing to pull in a
     bunch of Gtk libs (closes MS #2514)
+  * Sending a SIGHUP to the running server now re-execs it cleanly,
+    keeping the same port assignments and monitoring the same child
+    process.  This can be used to upgrade running msva instances after a
+    package update (closes MS #2532)
 
  -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 11 Oct 2010 16:02:22 -0400
 
